z-index issue

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -30,7 +30,7 @@
     &:before {
       content: '';
       position: absolute;
-      z-index: -1;
+      z-index: 1;
       top: 0;
       left: 0;
       right: 0;
